--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
     "vscode": {
       "extensions": [
         "ms-python.debugpy",
-        "ms-python.python"
+        "ms-python.python",
+        "kinolaev.git-lfs-file-locking"
       ]
     }
   }
